# Echo-Vault

./: .gitignore  CLAUDE.md  FIX_403_ERROR.md  QUICK_FIX_GUIDE.md  README.md  SEARCH_OPTIMIZATION_SUMMARY.md  SETUP.md  default.env  interview-prep.md  package.json  test_frontend_auth.html
.claude/agents/: vault-stack-doctor.md
.cursor/rules/: add-vault-feature.mdc  ship-to-prod.mdc  vault-stack-doctor.mdc
api/: SEARCH_OPTIMIZATION_INDEXES.sql  SEARCH_OPTIMIZATION_QUICKREF.md  SEARCH_OPTIMIZATION_REPORT.md  alembic.ini  celerybeat-schedule  create_test_user.py  main.py  mise.toml  nixpacks.toml  railway.toml  requirements.txt  seed_dummy_entries.py  test_auth_flow.py
api/alembic/: env.py
api/app/: celery_app.py  database.py
api/prompts/: cluster_label.txt  mood_infer.txt  reflection.txt  topic_labels.txt
api/scripts/: backfill_embeddings.py  encrypt_existing_entries.py  seed_dummy_entries.py  seed_entries.py  seed_test_data.py
api/tests/: conftest.py  test_auth.py  test_encryption.py  (+4 more)
app/: .env.example  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tsconfig.tsbuildinfo
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: README.md
app/src-tauri/src/: lib.rs  main.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT_VERCEL.md  ENV_CONFIG.md  FEATURES.md  SECURITY_FIX_SUMMARY.md  TECHNICAL_LEVERAGE_ANALYSIS.md  WEBSOCKET_AUTH_GUIDE.md  WEBSOCKET_QUICK_REFERENCE.md
infra/: Dockerfile.api  Dockerfile.web  docker-compose.override.yml  docker-compose.yml
(+181 files in other folders)
